[build-system]
# prometheus-client: import aioprom for dynamic version; minimum supported release for this package.
# setuptools>=77: [project].license-files (PEP 639).
requires = ["setuptools>=77.0.0", "wheel", "prometheus-client>=0.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aioprom"
dynamic = ["version"]
description = "Minimal asyncio HTTP server exposing Prometheus metrics"
readme = "README.md"
requires-python = ">=3.9"
# SPDX expression (replaces deprecated License :: ... trove classifiers). Full text in LICENSE.
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "aioprom contributors" }]
keywords = ["prometheus", "asyncio", "metrics", "http"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "prometheus-client>=0.9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
dev = ["build>=1.0.0", "twine>=5.0.0", "pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/aioprom"
Repository = "https://github.com/yourusername/aioprom"
Issues = "https://github.com/yourusername/aioprom/issues"

[tool.setuptools.dynamic]
version = { attr = "aioprom.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["aioprom*"]
